# Private-Finance-Manager

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Claude.md  LICENSE  README.md  app.py  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: README.md  dev_guide.md  index.md  operations.md  user_guide.md
docs/adr/: 0001-architecture.md  README.md
docs/architecture/: data_model.md  overview.md
docs/diagnostics/: README.md
scripts/: build_demo_data.py  build_exe.bat  build_exe.ps1  collect_diagnostics.py  doctor.py  export_context.py  finalize_hourly_legacy_cleanup.py  i18n_audit.py  migrate_hourly_bw_by.py  normalize_imports.py  pre_build_check.py  restructure_repo.py  run_demo.bat  run_demo.ps1
src/: __init__.py
src/application/dto/: accounts.py  common.py  employers.py  expenses.py  incomes.py  loans.py  overview.py  savings.py  security.py
src/application/importers/: csv_importer.py  excel_importer.py  utils.py
src/config/: settings.py
src/domain/: errors.py
src/infrastructure/: logging_setup.py  unit_of_work.py
src/security/: __init__.py  bootstrap.py  dpapi.py  manager.py  secure_db.py  security_config.py  sqlcipher_db.py  sqlcipher_driver.py
src/ui/: main_window.py
tests/: conftest.py
tests/integration/: test_repository_crud.py
tests/unit/: test_employer_service_overlap.py  test_hourly_pay_policy.py  test_loan_policy.py  test_overview_vm_contract.py  test_recurring_policy.py  test_savings_policy.py
(+80 files in other folders)
